src/snapshots/rlox__test_errors__rparens.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"print 1);\\n\")"
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ print 1);
   │ ──┬──  ┬  
   │   ╰─────── This statement should be terminated with ;
   │        │  
   │        ╰── Expected ;
───╯


